# Wave-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO_list.md  Wave-Engine-WIN10.sln  install.sh  install_local.sh  uninstall.sh
Example_app/: Example_app.vcxproj  Example_app.vcxproj.filters
Example_app/Include/: example_app.h  example_layer.h
Example_app/include/: example_app.h  example_layer.h
Example_app/src/: example_app.cpp  example_layer.cpp
Test/: Test.vcxproj  Test.vcxproj.filters  example_layer.cpp
Test/libs/x86/: gtest_main.lib
Test/src/: test_camera.cpp  test_main.cpp  test_objects.cpp
Wave/: Wave.vcxproj  Wave.vcxproj.filters
Wave-Editor/: Wave-Editor.vcxproj  Wave-Editor.vcxproj.filters  imgui.ini
Wave-Editor/include/: editor.h  editor_layer.h
Wave-Editor/res/Shaders/: viewport_framebuffer.frag  viewport_framebuffer.vert  viewport_framebuffer_ms.frag
Wave-Editor/src/: app_editor.cpp  editor.cpp  editor_layer.cpp
Wave/Include/: wave.h
Wave/Include/Core/: core.h  core_macros.h  engine.h  interfaces.h  layer.h  layer_stack.h  settings.h
Wave/Include/Dependencies/Stb/: stb_image.h
Wave/Include/Events/: app_event.h  event.h  event_dispatcher.h  key_event.h  mouse_event.h
Wave/Include/ImGUI/: imGUI_build.cpp  imGUI_layer.cpp
Wave/Include/Math/: camera.h  matrix_4f.h  quaternion.h  transform.h  vector.h
Wave/Include/Objects/: text.h
Wave/Include/Renderer/: buffer.h  color.h  framebuffer.h  gl_framebuffer.h  gl_vertex_array_buffer.h  renderer.h  shader.h  texture.h  vertex.h  vertex_array_buffer.h
Wave/Include/Utilities/: logger.h  res_loader.h
Wave/Include/Window/: window.h
Wave/Resources/Shaders/: default.frag  text-glyph.frag  text-glyph.vert
Wave/include/: api_OpenGL.h  entrypoint.h  wave.h  wave_pch.h
Wave/include/Core/: core.h  core_macros.h  engine.h  engine_time.h  interfaces.h  layer.h  layer_stack.h  platform_detection.h  settings.h  text_layer.h  uuid.h
Wave/include/Dependencies/GL/: glew.h
Wave/include/Events/: app_event.h  asset_event.h  event.h  event_dispatcher.h  key_event.h  mouse_event.h  renderer_event.h  scene_events.h
Wave/include/ImGUI/: imGUI_layer.h  scene_panel.h
Wave/include/Input/: input.h  key_codes.h  mouse_codes.h
Wave/include/Layer/: layer.h  layer_stack.h  text_layer.h
Wave/include/Lighting/: light.h
Wave/include/Math/: matrix_4f.h  transform.h  vector.h
Wave/include/Objects/: gl_text.h  object.h  objects.h  text.h
Wave/include/Renderer/: buffer.h  camera.h  color.h  editor_camera.h  framebuffer.h  gl_buffer.h  gl_framebuffer.h  gl_renderer.h  gl_shader.h  gl_texture.cpp  gl_texture.h  gl_uniform_buffer.h  gl_vertex_array_buffer.h  renderer.h  shader.h  texture.h  uniform_buffer.h  vertex.h  vertex_array_buffer.h
Wave/include/Scene/: camera.h  components.h  editor_camera.h  entity.h  scene.h  scene_camera.h
Wave/include/Text/: gl_text.h  text.h
Wave/include/Utilities/: Resource_loader.h  logger.h  res_loader.h  resource_loader.h
Wave/include/Window/: window.h
Wave/include/Window/glfw/: glfw_window.h
Wave/res/Models/The Prince/: The_Prince.mtl
Wave/res/Shaders/: default.frag  default.vert  default_3D.frag  default_3D.vert  display_normals_frag.glsl  display_normals_vert.glsl  text-glyph.frag  text-glyph.vert
Wave/src/: wave_pch.cpp
Wave/src/Core/: engine.cpp  engine_time.cpp  layer.cpp  layer_stack.cpp  text.cpp  text_layer.cpp  uuid.cpp
Wave/src/Events/: app_event.cpp  key_event.cpp  mouse_event.cpp  renderer_event.cpp  scene_events.cpp
Wave/src/ImGUI/: imGUI_build.cpp  imGUI_layer.cpp  scene_panel.cpp
Wave/src/Input/: input.cpp
Wave/src/Layer/: layer.cpp  layer_stack.cpp  text_layer.cpp
Wave/src/Lighting/: light.cpp
Wave/src/Math/: camera.cpp  matrix_4f.cpp  quaternion.cpp  transform.cpp  vector_2f.cpp  vector_3f.cpp  vector_4f.cpp
Wave/src/Objects/: gl_text.cpp  object.cpp  text.cpp
Wave/src/Renderer/: buffer.cpp  camera.cpp  color.cpp  editor_camera.cpp  framebuffer.cpp  gl_buffer.cpp  gl_framebuffer.cpp  gl_renderer.cpp  gl_shader.cpp  gl_uniform_buffer.cpp  gl_vertex_array_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  uniform_buffer.cpp  vertex.cpp  vertex_array_buffer.cpp
Wave/src/Scene/: camera.cpp  editor_camera.cpp  entity.cpp  scene.cpp  scene_camera.cpp
Wave/src/Text/: gl_text.cpp  text.cpp
Wave/src/Utilities/: Resource_loader.cpp  logger.cpp  res_loader.cpp  resource_loader.cpp
Wave/src/Window/: display_settings.cpp  window.cpp
Wave/src/Window/glfw/: glfw_window.cpp
